# learn-opengl-rust

./: .gitignore  Cargo.toml  Makefile.toml  README.md  index.html
.github/workflows/: ci.yaml
05-transformations/assets/shaders/native/: simple.frag
05-transformations/assets/shaders/web/: simple.frag
07-camera/assets/shaders/web/: simple.vert
08-colors/assets/shaders/web/: colors.vert
09-basic-lighting/assets/shaders/native/: colors.frag  colors.vert  light_cube.frag
09-basic-lighting/assets/shaders/web/: colors.frag  light_cube.frag
10-materials/assets/shaders/native/: colors.frag
10-materials/assets/shaders/web/: colors.frag  light_cube.vert
11-lighting-maps/: index.html
11-lighting-maps/assets/shaders/native/: colors.vert
11-lighting-maps/assets/shaders/web/: colors.frag  colors.vert
14-model-loading/assets/shaders/: colors.frag  light_cube.frag
18-face-culling/assets/shaders/: border.vert
18-framebuffers/assets/shaders/: depth.frag
20-cubemaps/assets/models/backpack/: dir.txt
20-cubemaps/assets/shaders/: border.frag  colors.frag  screen.frag  screen.vert  text.vert
21-advanced-glsl/assets/shaders/: colors.frag  screen.frag  skybox.frag
22-geometry-shader/assets/shaders/: explode.geom  screen.vert
assets/shaders/: colors.frag  colors.vert  light_cube.vert  screen.frag  skybox.vert  text.frag
assets/shaders/native/: colors.frag  colors.vert  light_cube.vert  simple.frag  simple.vert
assets/shaders/web/: colors.frag  colors.vert  light_cube.vert  simple.frag  simple.vert
macros/: Cargo.toml
macros/src/: lib.rs
scripts/: build_all.py  gh-pages.html
src/: camera.rs  geometry.rs  io.rs  light.rs  main.rs  material.rs  mesh.rs  model.rs  prelude.rs  scene.rs  screen_capture.rs  shader.rs  text.rs  texture.rs  user_inputs.rs  window.rs
src/shaders/native/: simple.frag  simple.vert
src/shaders/web/: simple.frag  simple.vert
wasm/: index.html
