[package]
name = "learning-opengl"
version = "0.1.0"
authors = ["Will Crichton <wcrichto@cs.stanford.edu>"]
edition = "2018"
resolver = "2"


[dependencies]
# OpenGL wrapper
glow = "0.7"

# General windowing support
winit = "0.24"

# General error handling
anyhow = "1.0"

# Image loader
image = {version = "0.23", default-features = false, features = ["jpeg", "png"]}

# Used for cross-platform access to a system timer
instant = "0.1"

# Math library
nalgebra-glm = "0.10"

# future helpers
futures = "0.3"

# Custom derive macros
macros = {path = "macros"}

# OBJ model loading
tobj = "2.0"


[target.'cfg(not(any(target_arch = "wasm32")))'.dependencies]
# Creating OpenGL contexts from native windows
glutin = "0.26"

# Async I/O runner
tokio = {version = "1.2", features = ["fs", "io-util", "rt", "macros"]}


[target.'cfg(target_arch = "wasm32")'.dependencies]
# Interoperating with Javascript
web-sys = {version = "0.3", features = ["Request", "Window", "Response"]}
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"

# Better errors on panic
console_error_panic_hook = "0.1"

# Adding web features to relevant crates
winit = {version = "0.24", features = ["web-sys"]}
instant = {version = "0.1", features = ["wasm-bindgen"]}


[patch.crates-io]
winit = { path = "../winit" }


[profile.dev.package."*"]
opt-level = 3


[profile.dev]
opt-level = 2
debug = true
debug-assertions = true